--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ mysqlclient = "*"
 django-debug-toolbar = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+pillow = "*"
 
 [dev-packages]
 autopep8 = "*"
