--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ django-debug-toolbar = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
 pillow = "*"
+whitenoise = "*"
+gunicorn = "*"
 
 [dev-packages]
 autopep8 = "*"
